<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.apeace.markdownpreview.MainActivity"
    android:id="@+id/markdown_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <EditText
            android:id="@+id/markdown_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:background="@android:color/transparent"
            android:hint="@string/edit_hint"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/preview_button"
            android:onClick="preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_button"/>

</LinearLayout>
